<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="POS_REQ" Id="{68b73440-8e2f-4f0c-a1ed-c36ee3814073}">
    <Declaration><![CDATA[TYPE POS_REQ :
STRUCT
	POS1: LREAL;
	POS2: LREAL;
	POS3: LREAL;
	POS4: LREAL;
	POS5: LREAL;
	POS6: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>