<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="POS_RSP" Id="{8caf8d33-949d-4962-aeb5-4cbd21ca8d54}">
    <Declaration><![CDATA[TYPE POS_RSP :
STRUCT
	POS1: LREAL;
	POS2: LREAL;
	POS3: LREAL;
	POS4: LREAL;
	POS5: LREAL;
	POS6: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>