<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="VEL_REQ" Id="{1d1b6bd4-51b4-4b5d-a00f-6b8c6bad0878}">
    <Declaration><![CDATA[TYPE VEL_REQ :
STRUCT
	VEL5: LREAL;
	VEL6: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>