<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="VEL_RSP" Id="{0570dc3e-0002-453c-a25f-d8c65a26b51a}">
    <Declaration><![CDATA[TYPE VEL_RSP :
STRUCT
	VEL1: LREAL;
	VEL2: LREAL;
	VEL3: LREAL;
	VEL4: LREAL;
	VEL5: LREAL;
	VEL6: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>